--- a/README.Rmd
+++ b/README.Rmd
@@ -27,6 +27,12 @@ Functions inside the package include:
 
 * `read_os_collection`: Takes required API key and optional asset owner address and converts JSON format API call result into dataframe
 
+* `add_logo`: Adds OpenSea logo to ggplot object
+
+* `scale_color_opensea`: Adds OpenSea color palette to point/line ggplot 
+
+* `scale_fill_opensea`: Adds OpenSea color palette to for fill option 
+
 ## Installation 
 
 Install development version from GitHub: 
@@ -53,4 +59,29 @@ library(opensear)
 ```{r, message=FALSE, eval=FALSE}
 total_collection<-read_os_collection(api_key="")
 collection_one_owner<-read_os_collection(api_key="",asset_owner="")
+```
+
+#### Create graph with OpenSea Palette
+```{r,include=FALSE}
+library(ggplot2)
+library(opensear)
+
+mayc_avg_price$date<-as.Date(mayc_avg_price$date, "%d-%b-%y")
+```
+
+```{r,warning=FALSE, message=FALSE}
+
+example_plot<-ggplot(data = mayc_avg_price, aes(x = date, y = avgprice, color = volume))+
+  geom_point()+
+  scale_color_opensea(palette = "dark", discrete = FALSE, reverse = TRUE)
+
+example_plot
+
+```
+
+#### Add OpenSea logo to graphs
+```{r,warning=FALSE, message=FALSE}
+
+add_logo(example_plot)
+
 ```
